# qhealing-space

./: .env.example  .gitignore  .replit  IMPLEMENTATION_SUMMARY.md  index.html  package-lock.json  package.json  pyproject.toml  replit.md  vite.config.js  wrangler.jsonc
attached_assets/: Pasted--smoother-expand-collapse-transitions-interpolations-ne_1776942913960.txt  Pasted-NOTE-Maintain-same-design-scheme-and-layouts-as-plastic_1775209542614.txt  Website_pages_1775209124169.docx  branding-1775467345710.json  branding-1775467348904.json  branding-1775467356589.json  branding-1775467467197.json  branding-1775467469487.json  branding-1775467471617.json  branding-1775467473463.json  branding-1775467477199.json  content-1776932471233.md  logoHref.html
backend/: main.py
src/: Layout.jsx  index.css  main.jsx
src/components/: BrandLogos.jsx  ChatBot.jsx  ScrollToTop.jsx
src/components/admin/: AdminBlogs.jsx  AdminCombinedHealings.jsx  AdminInstagram.jsx  AdminInstantConsult.jsx  AdminLayout.jsx  AdminLogin.jsx  AdminNewsletter.jsx  AdminOverview.jsx  AdminSettings.jsx  AdminSiteChat.jsx  api.js  validation.js
src/constants/: pricing.js  retreats.js
src/context/: ThemeContext.jsx
src/data/: serviceCatalog.js
src/lib/: firebaseClient.js
src/pages/: Admin.jsx  AuthPortal.jsx  BlogPost.jsx  Booking.jsx  CombinedHealings.jsx  GlobalPractices.jsx  HealingCategoryDetail.jsx  Healings.jsx  HinduRituals.jsx  Home.jsx  InstantConsult.jsx  Profile.jsx  RetreatCheckout.jsx  Retreats.jsx  Services.jsx  TranscendenceRituals.jsx
src/utils/: index.js
(+4 files in other folders)
