[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.1",
    "firebase-admin>=7.4.0",
    "httpx>=0.28.1",
    "panchang>=0.2.10",
    "pydantic[email]>=2.13.3",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.20",
    "qrcode[pil]>=8.2",
    "tzdata>=2026.2",
    "uvicorn>=0.46.0",
]